--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "geoip-lite": "^1.4.2",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
+    "public-ip": "^4.0.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
+    "react-native-network-info": "^5.2.1",
+    "react-native-public-ip": "^1.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
