--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://aishh2k.github.io/TrackMe",
   "name": "trackme",
   "version": "0.1.0",
   "private": true,
@@ -25,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.7.0"
+    "@types/leaflet": "^1.7.0",
+    "gh-pages": "^3.1.0"
   }
 }
